# vuio

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DEV.md  DOCKER.md  Docker-compose.yml  Dockerfile  Dockerfile.fast  LICENSE-MIT  README.md  ZEROCOPY_IMPLEMENTATION_COMPLETED.md  api.md  build.rs  config.example.toml  deny.toml  docker-compose-bridge.yml  docker-compose.local.yml  docker-compose.macos.yml  docker-compose.macvlan.yml  docker-compose.yml  docker-endpoint.sh  docker-entrypoint.sh  installer.nsi  scanoss.json  ssdp-announce.sh  test-ssdp-discovery.sh  test_dlna_discovery.py  test_interface_caching.rs  test_multicast_orbstack.py  test_ssdp_final.py  test_ssdp_notify.py
.cargo/: config.toml  config.toml.bk
.github/workflows/: ci.yml  freebsd.yml
.kiro/specs/codebase-refactoring/: design.md  requirements.md  tasks.md
.kiro/specs/cross-platform-compatibility/: design.md
.kiro/specs/database-batch-optimization/: design.md  requirements.md  tasks.md
go/: build.sh  go.mod  go.sum  mac.build.sh  main.go
go/apperror/: error.go
go/config/: config.go
go/database/: database.go  playlist.go
go/docker/: docker-compose.yml
go/logging/: logging.go
go/media/: media.go
go/platform/: platform.go  platform_bsd.go  platform_darwin.go  platform_linux.go  platform_windows.go
go/ssdp/: ssdp.go
go/state/: state.go
go/watcher/: watcher.go
go/web/: handlers.go  server.go  xml.go
helm/vuio/: Chart.yaml  values.yaml
helm/vuio/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
mcp/: mcp.json  reference.json
packaging/: README.md  build-packages.sh
packaging/bsd/: build-pkg.sh
packaging/docker/: builddocker.sh
packaging/linux/: build-arch.sh  build-deb.sh  build-rpm.sh
packaging/linux/nix/: vuio-service.nix  vuio.nix
packaging/macos/: build-pkg.sh
packaging/scan/: scan.sh
packaging/windows/: build-msi.ps1  nsis
schemas/: media.fbs
scripts/: build-and-push-docker.sh  run-large-benchmarks.ps1  run-large-benchmarks.sh  run-tests.sh  test-ssdp.py  validate_zerocopy_deployment.sh
src/: error.rs  http_clients.rs  lib.rs  logging.rs  main.rs  media.rs  natural_sort.rs  runtime_state.rs  ssdp.rs  tv_control.rs
src/airplay/: client.rs  mod.rs
src/chromecast/: client.rs  mod.rs  proto.rs
src/config/: diff.rs  example.rs  generator.rs  mod.rs  model.rs  template.toml  validation.rs  watcher.rs
src/database/: atomic_performance.rs  binary_format.rs  error_handling.rs  flatbuffer.rs  flatbuffer_tests.rs  index_manager.rs  index_manager_tests.rs  memory_bounded_cache.rs  memory_bounded_cache_tests.rs  memory_mapped.rs  memory_optimized_zerocopy.rs  mod.rs  playlist_formats.rs  redb.rs  zerocopy.rs  zerocopy_config_test.rs
src/database/redb/: health.rs  media_repo.rs  mod.rs  playlist_repo.rs  root_repo.rs  schema.rs  stats.rs
src/dial/: client.rs  mod.rs
src/discovery/: compat.rs  dial.rs  mdns.rs  mod.rs
src/lifecycle/: bootstrap.rs  cli.rs  maintenance.rs  media.rs  mod.rs  network.rs  runner.rs  shutdown.rs  update.rs
src/platform/: bsd.rs  config.rs  diagnostics.rs  error.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/platform/filesystem/: mod.rs  windows.rs
src/platform/network/: bsd.rs  linux.rs  macos.rs  mod.rs  socket.rs  windows.rs
src/watcher/: integration.rs  mod.rs
src/web/: auth.rs  casting.rs  client.rs  diagnostics.rs  eventing.rs  format.rs  handlers.rs  mcp.rs  mod.rs  playlist_api.rs  soap.rs  streaming.rs  ui.rs  xml.rs
src/web/mcp/: protocol.rs
src/web/soap/: parser.rs
src/web/ui/: dashboard.html
test-media/: sample.txt
tests/: BENCHMARK_GUIDE.md  README_performance.md  ZEROCOPY_BENCHMARK_RESULTS.md  advanced_db_perf_test.rs  audio_integration_tests.rs  benchmark_validation.rs  binary_format_benchmark.rs  cmd.txt  consistent_million_fps_test.rs  database_performance_comparison.rs  database_performance_tests.rs  integration_tests.rs  issue_24_pagination.rs  large_dataset_benchmarks.rs  mcp_integration_tests.rs  memory_usage_comparison.rs  metrics_integration_tests.rs  million_file_stress_test.rs  path_normalization_integration_tests.rs  platform_tests.rs  regression_tests.rs  zerocopy_complete_functionality_test.rs  zerocopy_database_tests.rs  zerocopy_performance_benchmarks.rs  zerocopy_vs_sqlite_benchmarks.rs
vuio-config/: config.toml.backup  media.db
