[package]
name = "vuio"
version = "0.0.16"
edition = "2021"

[lib]
name = "vuio"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.47", features = ["rt", "net", "fs", "time", "sync", "macros", "io-util", "signal", "process"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.18", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
async-stream = "0.3"
libc = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "8.2"
notify-debouncer-full = "0.6"
toml = "0.9"
serde_json = "1.0"
dirs = "6.0"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
audiotags = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock"
] }


[dev-dependencies]
tempfile = "3.21"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0
strip = true
overflow-checks = false