[package]
name = "vuio"
version = "0.0.16"
edition = "2021"
authors = ["vyrti"]
description = "A cross-platform DLNA/UPnP media server with advanced audio features, real-time file monitoring, and robust database management"
license = "Apache-2.0"
repository = "https://github.com/vuiodev/vuio"
homepage = "https://github.com/vuiodev/vuio"
documentation = "https://docs.rs/vuio"
readme = "README.md"
keywords = ["dlna", "upnp", "media-server", "streaming", "ssdp"]
categories = ["multimedia", "network-programming"]
exclude = [
    "test-media/**",
    "docker-compose*.yml",
    "Dockerfile",
    ".github/**",
    ".gitignore",
    "logo.png",
]

[lib]
name = "vuio"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.48", features = ["rt", "net", "fs", "time", "sync", "macros", "io-util", "signal", "process"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.19", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
async-stream = "0.3"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.2"
notify-debouncer-full = "0.6"
toml = "0.9"
toml_edit = "0.24"
serde_json = "1.0"
dirs = "6.0"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
audiotags = "0.5"
quick-xml = "0.38"

redb = "3.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock"
] }

[dev-dependencies]
tempfile = "3.24"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0
strip = true
overflow-checks = false
