[package]
name = "vuio"
version = "0.0.35"
edition = "2021"
authors = ["vyrti"]
description = "A cross-platform DLNA/UPnP media server with advanced audio features, real-time file monitoring, and robust database management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vuiodev/vuio"
homepage = "https://github.com/vuiodev/vuio"
documentation = "https://docs.rs/vuio"
readme = "README.md"
keywords = ["dlna", "upnp", "server", "streaming", "ssdp"]
categories = ["multimedia", "network-programming"]
exclude = [
    "test-media/**",
    "docker-compose*.yml",
    "Dockerfile",
    ".github/**",
    ".gitignore",
    "logo.png",
]

[lib]
name = "vuio"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.53", features = ["rt-multi-thread", "net", "fs", "time", "sync", "macros", "io-util", "signal", "process"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.24", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
thiserror = "2.0"
anyhow = "1.0"
rkyv = { version = "0.8", features = ["bytecheck", "unaligned", "little_endian", "pointer_width_32"] }
clap = { version = "4.6", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
futures-util = "0.3"
async-stream = "0.3"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.2"
notify-debouncer-full = "0.7"
toml = "1.1"
toml_edit = "0.25"
serde_json = "1.0"
dirs = "6.0"
hostname = "0.4"
ipnet = "2.12"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
audiotags = "0.5"
quick-xml = "0.41"
percent-encoding = "2.3"
sysinfo = { version = "0.39", default-features = false, features = ["system", "disk", "network"] }
socket2 = { version = "0.6", features = ["all"] }
mdns-sd = "0.20"
prost = "0.14"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
webpki-roots = "1.0"

redb = "4.1"
jwalk = "0.8"
tokio-stream = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock"
] }

[dev-dependencies]
tempfile = "3.27"
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0
strip = true
overflow-checks = false
